# fluorcast-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/: AGENTS.md
docs/: architecture.md  manual-qa-checklist.md  nibi-setup.md
slurm/: run_prediction_job.sbatch
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  nibi.rs
src/app/: App.test.tsx  App.tsx  styles.css
src/app/components/: AppShell.tsx
src/app/pages/: AboutPage.tsx  DiagnosticsPage.tsx  HomePage.test.tsx  HomePage.tsx  JobsPage.test.tsx  JobsPage.tsx  NewPredictionPage.test.tsx  NewPredictionPage.tsx  ResultDetailPage.test.tsx  ResultDetailPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx
src/features/jobs/: index.ts  jobs.test.ts
src/features/prediction/: index.ts
src/features/results/: index.ts
src/features/settings/: index.ts  settings.test.ts
src/lib/db/: db.test.ts  index.ts
src/lib/formatting/: formatting.test.ts  index.ts
src/lib/mock/: index.ts  mock-prediction-output.fixture.json  mockPredictionBackend.test.ts  mockPredictionBackend.ts
src/lib/remote/: RemoteExecutor.test.ts  RemoteExecutor.ts  duplicateCheck.test.ts  duplicateCheck.ts  errors.test.ts  errors.ts  index.ts  manualMfaSession.test.ts  manualMfaSession.ts  refreshDiagnostics.ts  types.ts  (+15 more)
src/test/: setup.ts
tests/fixtures/: prediction-input.example.json  prediction-output.failure.example.json  prediction-output.success.example.json  remote-output.flat-success.example.json
(+5 files in other folders)
