[package]
name = "fluorcast-desktop"
version = "0.1.0"
description = "Desktop controller for FluorCast predictions on NIBI"
authors = ["FluorCast contributors"]
edition = "2021"

[lib]
name = "fluorcast_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
